# ARVisualizer

./: .gitignore  AUTHORS  CMakeLists.txt  README.md
cmake/: am2b-arvisConfig.cmake.in
samples/mesh_rendering/: main.cpp
samples/multiple_windows/: main.cpp
samples/opencv_camera/: main.cpp
samples/pcl_grabber/: main.cpp
samples/pointcloud_rendering/: main.cpp
samples/simple_mesh/: main.cpp
samples/simple_video/: main.cpp
samples/user_interface/: main.cpp
scripts/: genshaders_cpp.py  install_dependencies.sh
src/: ARVisualizer.cpp  ARVisualizer.hpp  Camera.cpp  Camera.hpp  CircularBuffer.hpp  Delegate.hpp  ImguiRenderer.cpp  LoadShaders.cpp  Material.hpp  RenderPassParams.hpp  Renderer.cpp  Renderer.hpp  ShaderProgram.hpp  aliases.hpp  arvisualizer.cpp  arvisualizer.hpp  box.hpp  camera.cpp  camera.hpp  color.hpp  common.hpp  delegate.hpp  imguiRenderer.cpp  imguiRenderer.hpp  loadShaders.cpp  loadShaders.hpp  material.hpp  pointclouddata.hpp  renderer.cpp  renderer.hpp  sphere.hpp  ui.hpp  voxel.hpp
src/geometry/: Box.hpp  Capsule.hpp  Color.hpp  Ellipsoid.hpp  Line.hpp  PointCloudData.hpp  PolyMesh.hpp  Polygon.hpp  Quad.hpp  Sphere.hpp  Transform.hpp  Triangle.hpp  box.hpp  capsule.hpp  ellipsoid.hpp  pointclouddata.hpp  quad.hpp  sphere.hpp  triangle.hpp
src/mesh/: InstancedVertexBuffer.hpp  Mesh.hpp  MeshFactory.cpp  MeshFactory.hpp  Vertex.hpp  VertexBuffer.hpp  mesh.hpp  meshfactory.cpp  meshfactory.hpp  vertex.hpp  vertexbuffer.hpp
src/pointcloud/: PointCloud.hpp  PointCloudVertexBuffer.hpp  pointCloud.hpp  pointCloudVertexBuffer.hpp
src/rendering/: IndexBuffer.hpp  InstancedVertexBuffer.hpp  LineRendering.cpp  LineRendering.hpp  MeshRendering.cpp  MeshRendering.hpp  PointCloudRendering.cpp  PointCloudRendering.hpp  RenderComponent.hpp  RenderDefinitions.hpp  RenderResource.hpp  RenderingCommon.hpp  SceneInfo.hpp  VertexBuffer.hpp  VideoRendering.cpp  VideoRendering.hpp  VoxelRendering.cpp  VoxelRendering.hpp
src/shaders/: 2D_passthru.vert  default.frag  default.vert  flatShaded.frag  line.frag  line.vert  normal.frag  pointCloud.vert  simpleLit.frag  simpleNormal.vert  simpleTexture.frag  video.frag  video.vert  voxel.frag  voxel.vert
src/ui/: ui.cpp  ui_internal.hpp
src/windowmanager/: GLFWWindowEvents.cpp  GLFWWindowEvents.hpp  WMCommand.hpp  WindowEvents.cpp  WindowEvents.hpp  WindowManager.cpp  WindowManager.hpp  glfwwindowevents.cpp  glfwwindowevents.hpp  windowevents.cpp  windowevents.hpp  windowmanager.cpp  windowmanager.hpp  wmcommand.hpp
